<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Retro</string>
    <string name="admobAppId" translatable="false">ca-app-pub-9492048432036311~6837280281</string>
    <string name="admobBannerId" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="username">Username</string>
    <string name="groupname">Group Name</string>
    <string name="groupdec">Group Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_new_password">Re-Enter New Password</string>
    <string name="verify">Verify</string>
    <string name="change_pass">Change password</string>
    <string name="blocked_friends">Blocked friends</string>
    <string name="bio">Bio</string>
    <string name="textNoRequest">No friend requests yet!</string>
    <string name="uploading">Uploading…</string>
    <string name="failed_message">Failed to send Message!</string>
    <string name="nothing_selected">Nothing selected !!, Error.</string>
    <string name="please_write_message">Please write your message.</string>
    <string name="blocked_success">Blocked Successfully!</string>
    <string name="unblocked_success">Unblocked Successfully!</string>
    <string name="groupName_req">Group name is required.</string>
    <string name="email_not_verified">Your email is not verified!! We sent new verification Email to</string>
    <string name="check_spam">also please check SPAM box</string>
    <string name="set_profile">Please set &amp; update your profile information</string>
    <string name="profile_image_updated">Profile image updated successfully</string>
    <string name="write_name">Please write your name.</string>
    <string name="write_bio">Please write your bio.</string>
    <string name="profile_updated">Profile updated successfully.</string>
    <string name="error">Error:</string>
    <string name="blocked_by_user">You are blocked by the user!!</string>
    <string name="group_created_success">Group created successfully</string>
    <string name="camera_storage_permission_req">Camera &amp; Storage permissions are required</string>
    <string name="storage_permission_req">Storage permissions are required</string>
    <string name="enter_groupName">Please enter group name.</string>
    <string name="email_sent_password_success">Email sent, please follow the instructions…</string>
    <string name="email_failed_toSent">Failed to send email, please try again later…</string>
    <string name="please_enter_email">Please enter your email.</string>
    <string name="please_enter_pass">Please enter your password.</string>
    <string name="login_success">Logged in successfully</string>
    <string name="delete_group">Delete Group</string>
    <string name="sure_delete_group">Are you sure you want to DELETE this group permanently?</string>
    <string name="delete">DELETE</string>
    <string name="leave_group_text">Leave Group</string>
    <string name="sure_leave_group">Are you sure you want to LEAVE this group?</string>
    <string name="leave">LEAVE</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="group_left_success">Group left success!</string>
    <string name="group_delete_success">Group Deleted!</string>
    <string name="want_tobe_friend">wants to be your friend</string>
    <string name="new_friend_req">New friend request</string>
    <string name="password_length_limit">Password length must be at least 6 character</string>
    <string name="pass_doesnot_match">Password does not match!</string>
    <string name="password_update_success">Password updated successfully.</string>
    <string name="creating_account">Creating New Account</string>
    <string name="please_wait">Please Wait...</string>
    <string name="email_Sent">Verification email sent to </string>
    <string name="please_verify_email">please verify your email</string>
    <string name="creator_of_group">Creator of group</string>
    <string name="make_admin">Make group admin</string>
    <string name="remove_user">Remove user</string>
    <string name="add_user_to_group_quest">Add this user to group?</string>
    <string name="add">ADD</string>
    <string name="added_success">Added Successfully...</string>
    <string name="user_is_Admin">Participant is admin now.</string>
    <string name="user_removed">Participant removed</string>
    <string name="no_longer_admin">Participant is no longer admin</string>
    <string name="deleted_success">Deleted successfully</string>
    <string name="failed_delete_message">Failed to delete message</string>
    <string name="delete_everyone">Delete for Everyone</string>
    <string name="delete_me">Delete for me</string>
    <string name="view_image">View Image</string>
    <string name="delete_msg_ques">Delete message ?</string>
    <string name="deleted_from_list">deleted from your friends list</string>
    <string name="msg_req_canceled">You have canceled message request</string>
    <string name="added_to_list">deleted to your friends list</string>
    <string name="created_success">is Created successfully</string>
    <string name="create_group">Create Group</string>
    <string name="find_friends">Find friend</string>
    <string name="chats">Chats</string>
    <string name="requests">Requests</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="info">Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="support">Support</string>
    <string name="account">Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget password</string>
    <string name="new_account">Need new account?</string>
    <string name="login_via_phone">Login with phone number</string>
    <string name="verification_message">You will get SMS with a confirmation code this number</string>
    <string name="resend_code">Resend verification code</string>
    <string name="send_code">send verification code</string>
    <string name="verification">Verification</string>
    <string name="input_code_below">Please input code below</string>
    <string name="send_message_request">Send message Request</string>
    <string name="cancel_message_request">Cancel message Request</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="menu_document">Document</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_camera">Camera</string>
    <string name="accept">Accept</string>
    <string name="editgroup">Edit Group</string>
    <string name="add_participants">Add participant(s)</string>
    <string name="leave_group">Leave Group</string>
    <string name="participants">Participants (N)</string>
    <string name="decline">Decline</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_desc">Hope you enjoy Chatting</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="block">Block</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_pass">Update Password</string>
    <string name="about_text">Retro is Android Chat application with modern UI , private and public groups</string>
   <string name="ask_question">If you have any problems or question please visit\n [https://support.ammura.tech]</string>
</resources>