<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_chats"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chats" />

    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/friends" />
    <item
        android:id="@+id/action_requests"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/requests" />

    <item
        android:id="@+id/action_groups"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/groups" />
</menu>


