<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/homewallpaper" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_light_50" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/welcome"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome_desc"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="40dp">


          <Button
              android:id="@+id/login_home"
              android:layout_width="135dp"
              android:layout_height="wrap_content"
              android:background="@drawable/buttons"
              android:text="@string/sign_in"
              android:layout_marginRight="10dp"
              android:layout_alignParentEnd="true"
              android:textColor="@color/white"
              />

          <Button
              android:id="@+id/signup_home"
              android:layout_width="135dp"
              android:layout_height="wrap_content"
              android:background="@drawable/buttons"
              android:text="@string/sign_up"
              android:layout_marginRight="30dp"
              android:layout_toLeftOf="@+id/login_home"
              android:textColor="@color/white"
              />
      </RelativeLayout>



    </LinearLayout>

</RelativeLayout>