<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_wb"
    tools:context=".Activities.EditProfileActivity">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circle_image_edit_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_below="@+id/circle_image_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_xlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/textColor"  />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/blue_600"
            android:textStyle="bold"
            android:theme="@style/EditText.Grey" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/textColor"  />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bio_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:hint="@string/bio"
            android:layout_marginRight="-4dp"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/blue_600"
            android:textStyle="bold"
            android:theme="@style/EditText.Grey" />


        <Button
            android:id="@+id/update_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:background="@drawable/buttons"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admobBannerId"/>

</RelativeLayout>