<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_gravity="center"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/grey_10" />

            <TextView
                android:id="@+id/usrname_profile_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:text="@string/username"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90" />

            <TextView
                android:id="@+id/bio_profile_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/bio"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_60" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:gravity="center"
                android:orientation="horizontal">

<!--                <ImageButton-->
<!--                    android:layout_width="?attr/actionBarSize"-->
<!--                    android:layout_height="?attr/actionBarSize"-->
<!--                    android:layout_margin="@dimen/spacing_middle"-->
<!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
<!--                    android:tint="@color/light_green_600"-->
<!--                    app:srcCompat="@drawable/ic_chat" />-->

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image_profile_cr"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/user"
                    app:civ_border="true"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0dp"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="2dp" />

<!--                <ImageButton-->
<!--                    android:layout_width="?attr/actionBarSize"-->
<!--                    android:layout_height="?attr/actionBarSize"-->
<!--                    android:layout_margin="@dimen/spacing_middle"-->
<!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
<!--                    android:tint="@color/light_green_600"-->
<!--                    app:srcCompat="@drawable/ic_call" />-->

            </LinearLayout>


            <Button
                android:id="@+id/btn_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_xlarge"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_xlarge"
                android:background="@drawable/buttons"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/send_message_request"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/btn_decline_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_xlarge"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_xlarge"
                android:background="@drawable/buttons"
                android:backgroundTint="@color/red_400"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="invisible"
                android:text="@string/cancel_message_request"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/grey_10" />



        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admobBannerId"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>